docs: Remove extra comments

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -11,12 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Import Python packages "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +101,14 @@
     " # extracting each data row one by one and append it        \n",
     "        for line in csvreader:\n",
     "            #print(line)\n",
-    "            full_data_rows_list.append(line)\n",
+    "            full_data_rows_list.append(line) \n",
+    "            \n",
+    "# uncomment the code below if you would like to get total number of rows \n",
+    "# print(len(full_data_rows_list))\n",
+    "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
+    "# print(full_data_rows_list)\n",
     "\n",
-    "# creating a smaller event data csv file called event_datafile_new.csv that will be used to insert data into the \n",
+    "# creating a smaller event data csv file called event_datafile_new.csv that will be used to insert data into the \\\n",
     "# Apache Cassandra tables\n",
     "csv.register_dialect('myDialect', quoting=csv.QUOTE_ALL, skipinitialspace=True)\n",
     "\n",
@@ -112,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6821\n"
+      "156\n"
      ]
     }
    ],
@@ -135,7 +147,7 @@
    "source": [
     "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
     "\n",
-    "## Now we are ready to work with the CSV file titled *event_datafile_new.csv,* located within the workspace directory.  The *event_datafile_new.csv* contains the following columns: \n",
+    "## Now you are ready to work with the CSV file titled *event_datafile_new.csv,* located within the workspace directory.  The *event_datafile_new.csv* contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -157,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apache Cassandra Coding Section"
+    "## Begin writing your Apache Cassandra code in the cells below"
    ]
   },
   {
@@ -169,11 +181,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This makes a connection to a Cassandra instance on our local machine\n",
+    "# This should make a connection to a Cassandra instance your local machine \n",
+    "# (127.0.0.1)\n",
+    "\n",
     "from cassandra.cluster import Cluster\n",
     "try:\n",
     "    cluster = Cluster(['127.0.0.1'])\n",
@@ -193,11 +207,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# specify data replication strategy\n",
     "try:\n",
     "    session.execute(\"\"\"\n",
     "    CREATE KEYSPACE IF NOT EXISTS udacity\n",
@@ -216,11 +229,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set the current keyspace to work with our database we created\n",
     "try:\n",
     "    session.set_keyspace(\"udacity\")\n",
     "except Exception as e:\n",
@@ -231,30 +243,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra we think of queries first!!!"
+    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create queries to ask the following **three** questions of the data\n",
+    "## Create queries to ask the following three questions of the data\n",
     "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
+    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "\n",
+    "\n",
+    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "    \n",
+    "\n",
+    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
     "# query1 = \"select artist, song, length where sessionId = 338 and itemInSession = 4\"\n",
-    "query1 = \"CREATE TABLE IF NOT EXISTS discography \"\n",
+    "query1 = \"CREATE TABLE IF NOT EXISTS music_app_history \"\n",
     "query1 = query1 + \"(artist text, song text, length float, sessionId int, itemInSession int, PRIMARY KEY (sessionId, itemInSession))\"\n",
-    "\n",
     "try:\n",
     "    session.execute(query1)\n",
     "except Exception as e:\n",
@@ -263,27 +280,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# transformation and loading part of the ETL\n",
+    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
-    "    \n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
-    "    \n",
     "    for line in csvreader:\n",
-    "        \n",
-    "        # Assign the INSERT statements into the `query` variable\n",
-    "        query = \"INSERT INTO discography (artist, song, length, sessionId, itemInSession)\"\n",
+    "# TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "        query = \"INSERT INTO music_app_history (artist, song, length, sessionId, itemInSession)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s)\"\n",
-    "        \n",
-    "        # Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        # TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        # For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (line[0], line[9], float(line[5]), int(line[8]), int(line[3])))"
    ]
   },
@@ -296,28 +310,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Faithless Music Matters (Mark Knight Dub) 495.30731201171875 338 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "query = \"SELECT * FROM discography WHERE sessionId = 338 AND itemInSession = 4\"\n",
+    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "query = \"SELECT * FROM music_app_history WHERE sessionId = 338 AND itemInSession = 4\"\n",
     "\n",
     "try:\n",
     "    rows = session.execute(query)\n",
+    "#     session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
     "for row in rows:\n",
+    "#     print(row)\n",
+    "#     print(row.artist, row.song, row.length, row.sessionid, row.iteminsession)\n",
     "    print(row.artist, row.song, row.length, row.sessionid, row.iteminsession)"
    ]
   },
@@ -325,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NOW LET'S CREATE QUERY BASED TABLE FOR THE REMAINING TWO QUESTIONS."
+    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
    ]
   },
   {
@@ -337,15 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
+    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
-    "query2 = \"CREATE TABLE IF NOT EXISTS user_artist_relation \"\n",
+    "query2 = \"CREATE TABLE IF NOT EXISTS music_app_history2 \"\n",
     "query2 = query2 + \"(artist text, song text, firstName text, lastName text, userId int, sessionId int, itemInSession int, PRIMARY KEY ((userId, sessionId), itemInSession))\"\n",
-    "\n",
     "try:\n",
     "    session.execute(query2)\n",
     "except Exception as e:\n",
@@ -354,55 +363,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# transformation and loading part of the ETL\n",
+    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
-    "    \n",
     "    for line in csvreader:\n",
-    "        \n",
-    "        # Assign the INSERT statements into the `query` variable\n",
-    "        query = \"INSERT INTO user_artist_relation (userId, sessionId, artist, song, firstName, lastName, itemInSession)\"\n",
+    "# TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "        query = \"INSERT INTO music_app_history2 (userId, sessionId, artist, song, firstName, lastName, itemInSession)\"\n",
     "        query = query + \" VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
-    "        \n",
-    "        # Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        # TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        # For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (int(line[10]), int(line[8]), line[0], line[9], line[1], line[4], int(line[3])))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Do a SELECT to verify that the data have been inserted into each table"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Down To The Bone Keep On Keepin' On Sylvie Cruz 0\n",
-      "Three Drives Greece 2000 Sylvie Cruz 1\n",
-      "Sebastien Tellier Kilometer Sylvie Cruz 2\n",
-      "Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "query = \"SELECT * FROM user_artist_relation WHERE userId = 10 AND sessionId = 182\"\n",
+    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "query = \"SELECT * FROM music_app_history2 WHERE userId = 10 AND sessionId = 182\"\n",
     "\n",
     "try:\n",
     "    rows = session.execute(query)\n",
+    "#     session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
@@ -419,13 +410,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query3 = \"CREATE TABLE IF NOT EXISTS user_info \"\n",
-    "query3 = query3 + \"(userId int, firstName text, lastName text, song text, PRIMARY KEY (song, userId))\"\n",
-    "\n",
+    "## Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "query3 = \"CREATE TABLE IF NOT EXISTS music_app_history3 \"\n",
+    "query3 = query3 + \"(firstName text, lastName text, song text, PRIMARY KEY (song))\"\n",
     "try:\n",
     "    session.execute(query3)\n",
     "except Exception as e:\n",
@@ -434,59 +425,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# transformation and loading part of the ETL\n",
+    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
-    "    \n",
     "    for line in csvreader:\n",
-    "        \n",
     "        # Assign the INSERT statements into the `query` variable\n",
-    "        query = \"INSERT INTO user_info (userId, firstName, lastName, song)\"\n",
-    "        query = query + \" VALUES (%s, %s, %s, %s)\"\n",
-    "        \n",
+    "        query = \"INSERT INTO music_app_history3 (firstName, lastName, song)\"\n",
+    "        query = query + \" VALUES (%s, %s, %s)\"\n",
     "        # Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        session.execute(query, (int(line[10]), line[1], line[4], line[9]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Do a SELECT to verify that the data have been inserted into each table"
+    "        # For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        session.execute(query, (line[1], line[4], line[9]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jacqueline Lynch\n",
-      "Tegan Levine\n",
-      "Sara Johnson\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "query = \"SELECT firstName, lastName FROM user_info WHERE song = 'All Hands Against His Own'\"\n",
+    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "query = \"SELECT firstName, lastName FROM music_app_history3 WHERE song = 'All Hands Against His Own'\"\n",
     "\n",
     "try:\n",
     "    rows = session.execute(query)\n",
+    "#     session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
     "for row in rows:\n",
-    "    print(row.firstname, row.lastname)"
+    "    print(row)\n",
+    "#     print(row.firstname, row.lastname, row.song)"
    ]
   },
   {
@@ -498,19 +473,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop the table before closing out the sessions\n",
-    "tables = [\"discography\", \"user_artist_relation\", \"user_info\"]\n",
-    "queries = [\"DROP TABLE {}\".format(i) for i in tables]\n",
-    "for query in queries:\n",
-    "    try:\n",
-    "        rows = session.execute(query)\n",
-    "    except Exception as e:\n",
-    "        print(e)"
+    "## TO-DO: Drop the table before closing out the sessions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -521,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,6 +510,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"drop table music_app_history3\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
   }
  ],
  "metadata": {
